fixed the formatting of the help section for contacting support.  it was misaligned

--- a/web/css/QAMenu.css
+++ b/web/css/QAMenu.css
@@ -39,3 +39,7 @@ root {
     padding-left: 30px;
 }
 
+#contactSupportForm{
+    padding-left: 40%;
+    width: 60%;
+}
